--- a/SPRINT3/Tela Educacao/CSS/style.css
+++ b/SPRINT3/Tela Educacao/CSS/style.css
@@ -95,6 +95,11 @@ section {
     border-radius: 1rem;
 }
 
+h1 {
+    margin-bottom: 20px;
+    
+}
+
 /**********************************/
 /* Sidebar
 /**********************************/
@@ -144,9 +149,7 @@ section {
 }
 
 
-.sidebar.active {
-    transform: translateX(-100%);
-}
+
 
 .sidebar ul {
     list-style: none;
@@ -232,20 +235,21 @@ section {
     clip-path: polygon(35% 0, 65% 0, 65% 35%, 100% 35%, 100% 65%, 65% 65%, 65% 100%, 35% 100%, 35% 65%, 0 65%, 0 35%, 35% 35%);
 }
 
+.container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 30px;
+    margin: 3rem 1.6rem;
+    margin-left: 30rem;
+    transition: var(--transition);
 
-.main-content {
-    flex-grow: 1;
-    padding: 20px;
-    background-color: #f4f4f9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+}
+.container.collapsed{
+    margin-left: 17rem;
+    transition: var(--transition);
 }
 
-h1 {
-    margin-bottom: 20px;
-}
+
 
 .menu ul {
     list-style: none;
@@ -267,39 +271,65 @@ h1 {
 .collapsed .menu ul li .menu-text {
     display: none;
 }
-.main-content {
-    flex: 1;
-    padding: 20px;
-    background-color: var(--clr-card);
-}
-.cards {
+
+.food,.physical{
+    min-height: 12rem;
     display: flex;
-    gap: 20px;
+    align-items: center;
 }
-.card {
+.food,.physical{
     background-color: var(--clr-button);
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: var(--clr-card-shadow);
     border-radius: 10px;
-    width: calc(50% - 10px);
+
+    
 }
 
+@media screen and (min-width:960px){
+    .title{
+        grid-column: 1 / -1;
+    }
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+    .food{
+        grid-column: span 1; 
+        grid-row: span 2;
+    }
+    .physical{
+        grid-column: span 1; 
+        grid-row: span 2;
+    }
+   
+}
+
+@media screen and (min-width: 1170px){
+    .title{
+        grid-column: 1 / -1;
+    }
+    .container{
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+    .cards{
+        grid-column: 1 / -1;    
+    }
+    .food{
+        grid-column: span 2;
+        grid-row: span 4;
+    }
+    .physical{
+        grid-column: span 2; 
+        grid-row: span 4;
+    }
+
+}
+
+
 @media (max-width: 768px) {
-    .menu-toggle {
-        display: block;
-    }
-
-    .sidebar {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translateX(-100%);
-    }
-
-    .main-content {
-        padding-top: 50px;
-    }
-
+    
     .cards {
         grid-template-columns: 1fr;
     }
