--- a/SPRINT3/Login/css/login.css
+++ b/SPRINT3/Login/css/login.css
@@ -46,7 +46,7 @@
     --clr-sidebar-hover: #33CC66; /* Verde ao passar o mouse */
     --clr-navbar: #1E1E1E; /* Escuro para o topo */
     --clr-navbar-text: #33CC66; /* Texto verde no topo */
-    --clr-button: #1F8B4A; /* Botões verdes */
+    --clr-button: #33CC66; /* Botões verdes */
     --clr-button-text: #FFFFFF; /* Texto dos botões em branco */
     --clr-highlight: #33CC66; /* Elementos de destaque em verde */
     --clr-graph-lines: #33CC66; /* Linhas de gráficos em verde */
@@ -95,14 +95,12 @@ section {
     border-radius: 1rem;
 }
 
-h1 {
-    margin-bottom: 20px;
-    
-}
+
 
 /**********************************/
 /* Sidebar
 /**********************************/
+
 
 .sidebar {
     background-color: var(--clr-sidebar);
@@ -149,7 +147,9 @@ h1 {
 }
 
 
-
+.sidebar.active {
+    transform: translateX(-100%);
+}
 
 .sidebar ul {
     list-style: none;
@@ -175,15 +175,14 @@ h1 {
     gap:10px;
 }
 
-
-
 .switch {
     position: fixed; bottom: 1.8rem;
     display: flex;
     align-items: center;
     font-size: 1.8rem;
-    left: 1rem;
+    left: 2rem;
 }
+
 
 .switch__track {
     background-color: var(--clr-button);
@@ -217,7 +216,7 @@ h1 {
     left: 1rem; /* Distância da lateral */
     width: 4rem;
     height: 4rem;
-    background: linear-gradient(135deg, var(--clr-sidebar),var(--clr-button));
+    background: linear-gradient(135deg, #0099CC, #33CC66);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -235,21 +234,6 @@ h1 {
     clip-path: polygon(35% 0, 65% 0, 65% 35%, 100% 35%, 100% 65%, 65% 65%, 65% 100%, 35% 100%, 35% 65%, 0 65%, 0 35%, 35% 35%);
 }
 
-.container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-gap: 30px;
-    margin: 3rem 1.6rem;
-    margin-left: 30rem;
-    transition: var(--transition);
-
-}
-.container.collapsed{
-    margin-left: 17rem;
-    transition: var(--transition);
-}
-
-
 
 .menu ul {
     list-style: none;
@@ -266,93 +250,8 @@ h1 {
 .menu ul li i {
     font-size: 24px;
     margin-right: 15px;
-    color: white;
+    color: var(--clr-background);
 }
 .collapsed .menu ul li .menu-text {
     display: none;
-}
-
-.food,.physical{
-    min-height: 12rem;
-    display: flex;
-    align-items: center;
-}
-.food,.physical{
-    background-color: var(--clr-button);
-    padding: 20px;
-    box-shadow: var(--clr-card-shadow);
-    border-radius: 10px;
-
-    
-}
-
-@media screen and (min-width:960px){
-    .title{
-        grid-column: 1 / -1;
-    }
-    .container{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
-    .food{
-        grid-column: span 1; 
-        grid-row: span 2;
-    }
-    .physical{
-        grid-column: span 1; 
-        grid-row: span 2;
-    }
-   
-}
-
-@media screen and (min-width: 1170px){
-    .title{
-        grid-column: 1 / -1;
-    }
-    .container{
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-    }
-    .cards{
-        grid-column: 1 / -1;    
-    }
-    .food{
-        grid-column: span 2;
-        grid-row: span 4;
-    }
-    .physical{
-        grid-column: span 2; 
-        grid-row: span 4;
-    }
-
-}
-
-
-@media (max-width: 768px) {
-    
-    .cards {
-        grid-template-columns: 1fr;
-    }
-}
-
-/* Estilo para telas médias */
-@media (min-width: 769px) and (max-width: 1024px) {
-    .sidebar {
-        width: 150px;
-    }
-
-    .cards {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-/* Estilo para telas grandes */
-@media (min-width: 1025px) {
-    .sidebar {
-        width: 200px;
-    }
-
-    .cards {
-        grid-template-columns: repeat(2, 1fr);
-    }
 }
