--- a/SPRINT3/Perfil/css/style.css
+++ b/SPRINT3/Perfil/css/style.css
@@ -194,7 +194,7 @@ section {
     width: 80px;
 }
 .menu-toggle {
-    position: absolute;
+    position: fixed;
     top: 10px;
     left: 200px;
     cursor: pointer;
