--- a/SPRINT3/Tela Inicial/css/TelaInicial.css
+++ b/SPRINT3/Tela Inicial/css/TelaInicial.css
@@ -122,7 +122,7 @@ section {
     width: 80px;
 }
 .menu-toggle {
-    position: absolute;
+    position: fixed;
     top: 10px;
     left: 200px;
     cursor: pointer;
