--- a/SPRINT3/Perfil/css/style.css
+++ b/SPRINT3/Perfil/css/style.css
@@ -431,7 +431,7 @@ section {
     background: var(--clr-card);
     padding: 15px;
     border-radius: 10px;
-    box-shadow: var(--clr-shadow);
+    box-shadow: var(--shadow-card);
     width: 150px;
     text-align: center;
 }
@@ -451,7 +451,7 @@ section {
     background: var(--clr-card);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: var(--clr-shadow);
+    box-shadow: var(--shadow-card);
     width: 100%;
     max-width: 600px;
     margin-top: 20px;
