--- a/SPRINT3/Login/css/login.css
+++ b/SPRINT3/Login/css/login.css
@@ -131,6 +131,7 @@ section {
     color: var(--clr-card);
     font-size: 20px;
     z-index: 10;
+    transition: var(--transition);
 }
 
 
@@ -256,6 +257,7 @@ section {
     display: none;
 }
 
+
 /**********************************/
 /* Container
 /**********************************/
@@ -286,4 +288,153 @@ section {
     }
    
 
+}
+
+
+
+/**********************************/
+/* Cadastro
+/**********************************/
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.registration_area {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 10px;
+    background: var(--clr-card);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-width: 25rem;
+    height: 48rem;
+    text-align: center;
+    transition: var(--transition);
+}
+.form-group {
+    display: flex;
+    align-items: center;
+    background: #f0f0f0;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    transition: var(--transition);
+}
+.form-group i {
+    margin-right: 10px;
+    transition: var(--transition);
+}
+input, select {
+    border: none;
+    background: transparent;
+    outline: none;
+    flex: 1;
+    transition: var(--transition);
+    
+}
+.btn {
+    width: 100%;
+    background: #28a745;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: var(--transition);
+}
+
+.title{
+    font: var(--ts-normal-semibold);
+}
+@media screen and (min-width:500px) and (max-width:690px){
+    .registration_area{
+        left: 0%;
+        right: 2rem;
+    }
+   
+}
+
+@media screen and (min-width:750px){
+    .registration_area{
+        width: 50rem;
+        grid-column: 1/-1;
+        
+    }
+    
+   
+}
+.form {
+    display: grid;
+    gap: 10px; /* Espaço entre os inputs */
+    width: 90%;
+    max-width: 800px;
+    margin: auto;
+}
+
+
+@media screen and (min-width:960px){
+    .registration_area{
+        width: 75rem;
+        grid-column: 1/-1;
+        height: 45rem;
+
+    }
+
+    .form{
+        grid-column: 1/-1;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .form-group.input__email{
+        grid-column: 1/-1;
+    }
+    .form-group.input__password{
+        grid-column: 1/-1;
+    }
+    .btn{
+        grid-column: 1/-1;
+    }
+   
+}
+
+
+@media screen and (min-width:1170px){
+    .registration_area{
+        width: 75rem;
+        grid-column: 1/-1;
+        height: 45rem;
+    }
+
+    .form{
+        grid-column: 1/-1;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .form-group.input__email{
+        grid-column: 1/-1;
+    }
+    .form-group.input__password{
+        grid-column: 1/-1;
+    }
+    .btn{
+        grid-column: 1/-1;
+    }
+   
+}
+
+@media screen and (min-width:960px){
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+   
+}
+
+@media screen and (min-width: 1170px){
+    .container{
+        grid-template-columns: repeat(4, 1fr);
+    }
+   
 }
