--- a/SPRINT3/telaRegistros/css/index.css
+++ b/SPRINT3/telaRegistros/css/index.css
@@ -124,6 +124,7 @@ body {
     align-items: center;
 }
 
+
 section {
 
     /*background-color: var(--clr-sidebar);*/
@@ -131,8 +132,9 @@ section {
     transition: var(--transition);
     border: 1px solid var(--clr-card-border);
     box-shadow: 0 4px 12px var(--clr-card-shadow);
-    padding: 1.6;
+    padding: 1.6rem;
     border-radius: 1rem;
+    
 }
 
 
@@ -318,6 +320,7 @@ section {
     margin: 3rem 1.6rem;
     margin-left: 30rem;
     transition: var(--transition);
+    overflow: hidden;
 }
 
 .container.collapsed {
@@ -363,6 +366,9 @@ body {
     height: 48rem;
     text-align: center;
     transition: var(--transition);
+    overflow: hidden;
+    margin-top: 25rem;
+
 }
 
 @media screen and (min-width:500px) and (max-width:690px) {
@@ -389,7 +395,9 @@ body {
         height: 45rem;
 
     }
-
+    .tabela-atividades{
+        width: 75rem;
+    }
     .form {
         grid-column: 1/-1;
         grid-template-columns: repeat(2, 1fr);
@@ -436,7 +444,10 @@ body {
         grid-column: 1/-1;
         height: 45rem;
     }
-
+    .tabela-atividades{
+        width: 75rem;
+        grid-column: 1/-1;
+    }
     .form {
         grid-column: 1/-1;
         grid-template-columns: repeat(4, 1fr);
@@ -458,7 +469,9 @@ body {
         grid-column: 1/-1;
     }
 }
-
+.form{
+    transition: var(--transition);
+}
 .form-group {
     display: flex;
     align-items: center;
@@ -467,6 +480,7 @@ body {
     border-radius: 5px;
     margin-bottom: 15px;
     transition: var(--transition);
+    overflow: hidden;
 }
 
 .form-group i {
@@ -808,7 +822,7 @@ select {
     margin-top: 2rem;
     padding: 1rem;
     border-top: 1px solid var(--clr-card-border);
-    background-color: var(--clr-card-hover);
+    background-color: var(--clr-card);
     border-radius: 8px;
     max-height: 200px;
     overflow-y: auto;
@@ -825,3 +839,38 @@ select {
     background-color: var(--clr-sidebar);
     border-radius: 4px;
 }
+
+.tabela-atividades {
+    min-width: 25rem;
+    border-collapse: collapse;
+    margin-top: 20px;
+    font-family: 'Cairo', sans-serif;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    margin-left: 2rem;
+    margin-bottom: 10rem;
+}
+
+.tabela-atividades thead {
+    background-color: #3e8ed0; /* cor do topo */
+    color: white;
+}
+
+.tabela-atividades th,
+.tabela-atividades td {
+    border: 1px solid #ddd;
+    padding: 12px 10px;
+    text-align: center;
+    font-size: 14px;
+}
+
+.tabela-atividades tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.tabela-atividades tbody:hover {
+    background-color: #eef6ff;
+}
+
+
