--- a/SPRINT4/Dasboard/css/index.css
+++ b/SPRINT4/Dasboard/css/index.css
@@ -46,7 +46,7 @@
     --clr-sidebar-hover: #33CC66; /* Verde ao passar o mouse */
     --clr-navbar: #1E1E1E; /* Escuro para o topo */
     --clr-navbar-text: #33CC66; /* Texto verde no topo */
-    --clr-button: #1F8B4A; /* Botões verdes */
+    --clr-button: #33CC66; /* Botões verdes */
     --clr-button-text: #FFFFFF; /* Texto dos botões em branco */
     --clr-highlight: #33CC66; /* Elementos de destaque em verde */
     --clr-graph-lines: #33CC66; /* Linhas de gráficos em verde */
@@ -95,14 +95,12 @@ section {
     border-radius: 1rem;
 }
 
-h1 {
-    margin-bottom: 20px;
-    
-}
+
 
 /**********************************/
 /* Sidebar
 /**********************************/
+
 
 .sidebar {
     background-color: var(--clr-sidebar);
@@ -149,7 +147,9 @@ h1 {
 }
 
 
-
+.sidebar.active {
+    transform: translateX(-100%);
+}
 
 .sidebar ul {
     list-style: none;
@@ -175,15 +175,14 @@ h1 {
     gap:10px;
 }
 
-
-
 .switch {
     position: fixed; bottom: 1.8rem;
     display: flex;
     align-items: center;
     font-size: 1.8rem;
-    left: 1rem;
+    left: 2rem;
 }
+
 
 .switch__track {
     background-color: var(--clr-button);
@@ -217,7 +216,7 @@ h1 {
     left: 1rem; /* Distância da lateral */
     width: 4rem;
     height: 4rem;
-    background: linear-gradient(135deg, var(--clr-sidebar),var(--clr-button));
+    background: linear-gradient(135deg, #0099CC, #33CC66);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -235,21 +234,6 @@ h1 {
     clip-path: polygon(35% 0, 65% 0, 65% 35%, 100% 35%, 100% 65%, 65% 65%, 65% 100%, 35% 100%, 35% 65%, 0 65%, 0 35%, 35% 35%);
 }
 
-.container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-gap: 30px;
-    margin: 3rem 1.6rem;
-    margin-left: 30rem;
-    transition: var(--transition);
-
-}
-.container.collapsed{
-    margin-left: 17rem;
-    transition: var(--transition);
-}
-
-
 
 .menu ul {
     list-style: none;
@@ -266,127 +250,290 @@ h1 {
 .menu ul li i {
     font-size: 24px;
     margin-right: 15px;
-    color: white;
+    color: var(--clr-background);
 }
 .collapsed .menu ul li .menu-text {
     display: none;
 }
 
-.food, .physical {
+
+
+/**********************************/
+/* Status
+/**********************************/
+
+.status {
     min-height: 12rem;
     display: flex;
     align-items: center;
-    background-color: var(--clr-button);
-    padding: 20px;
-    box-shadow: var(--clr-card-shadow);
-    border-radius: 10px;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
 }
 
-.options {
-    display: none; /* Inicialmente oculto */
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: var(--clr-card);
-    padding: 1rem;
-    box-shadow: var(--clr-card-shadow);
-    border-radius: 10px;
-    transition: max-height 0.5s ease-in-out;
-    max-height: 0;
-    overflow: hidden;
+.status__icon {
+    font-size: 3.6rem;
+    margin-left: .8rem;
+    padding: .5rem;
 }
 
-.options ul {
-    list-style: none;
-    padding: 0;
+.info {
+    font: var(--ts-caption);
+    text-transform: uppercase;
 }
 
-.options ul li {
-    padding: 10px 0;
-    cursor: pointer;
+.status__icon--metas, .info__total--metas {
+    color: var(--clr-card-hover);
+    transition: var(--transition);
 }
 
-.food.expanded .options, .physical.expanded .options {
-    display: block;
-    max-height: 1000px; /* Permite que as opções sejam visíveis quando expandidas */
+.status__icon--alimentar, .info__total--alimentar {
+    color: var(--clr-sidebar);
+    transition: var(--transition);
 }
 
-.food.expanded, .physical.expanded {
-    background-color: var(--clr-highlight);
+.status__icon--humor, .info__total--humor {
+    color: var(--clr-button);
+    transition: var(--transition);
+}
+
+.status__icon--atividades, .info__total--atividades {
+    color: var(--clr-sidebar);
+    transition: var(--transition);
+}
+
+@media screen and (min-width: 1170px){
+    .status:nth-of-type(1){
+        grid-column: 1;
+    }
+}
+
+
+/**********************************/
+/* Layout da Página
+/**********************************/
+
+.container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 30px;
+    margin: 3rem 1.6rem;
+    margin-left: 30rem;
+    transition: var(--transition);
+}
+.container.collapsed{
+    margin-left: 17rem;
+    transition: var(--transition);
 }
 
 @media screen and (min-width:960px){
-    .title{
-        grid-column: 1 / -1;
-    }
     .container{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
-    .food{
-        grid-column: span 1; 
-        grid-row: span 2;
-    }
-    .physical{
-        grid-column: span 1; 
-        grid-row: span 2;
     }
    
 }
 
 @media screen and (min-width: 1170px){
-    .title{
-        grid-column: 1 / -1;
-    }
     .container{
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
     }
-    .cards{
-        grid-column: 1 / -1;    
-    }
-    .food{
-        grid-column: span 2;
-        grid-row: span 4;
-    }
-    .physical{
-        grid-column: span 2; 
-        grid-row: span 4;
-    }
+   
 
 }
 
 
-@media (max-width: 768px) {
+
+/**********************************/
+/* State Select
+/**********************************/
+.state-select {
+    font: var(--ts-normal-semibold);
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    box-shadow: var(--shadow-card);
+    border-radius: 1rem;
+    position: relative;
+}
+.state-select-2{
+    font: var(--ts-normal-semibold);
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    box-shadow: var(--shadow-card);
+    border-radius: 1rem;
+    position: relative;
+    z-index: 1;
+}
+.state-select-toggle {
+    padding: 1.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.state-select-toggle__icon {
+    transition: var(--transition);
+}
+
+.state-select-toggle__icon--rotate {
+    transform: rotate(-180deg);
+}
+
+.state-select-list {
+    max-height: 30rem;
+    overflow-y: scroll;
+    border-radius: 1rem;
+    padding: 1.6rem;
+    position: absolute;
+    width: 100%;
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    box-shadow: var(--shadow-card);
+    top: calc(100% + 1.5rem);
+    visibility: hidden;
+    opacity: 0;
+    z-index: 10;
+
+}
+
+.state-select-list--show {
+    visibility: visible;
+    opacity: 1;
+    top: calc(100% + .75rem);
+}
+
+.state-select-list__search {
+    background-color: var(--clr-background);
+    transition: var(--transition);
+    color: var(--clr-font);
+    padding: 1.6rem;
+    border-radius: 1rem;
+    border: none;
+    outline: none;
+    width: 100%;
+   
+}
+
+.state-select-list__search::placeholder {
+    color: var(--clr-font);
+    opacity: .6;
+    transition: var(--transition);
+}
+
+.state-select-list__item {
+    padding: 1.6rem;
+    color: var(--clr-link);
+    cursor: pointer;
+}
+
+.state-select-list__item:hover {
+    color: var(--clr-card);
+    background-color: var(--clr-link);
+}
+
+.state-select-list__item--hide {
+    display: none;
+}
+
+@media screen and (min-width: 960px){
+    .state-select{
+        grid-column: 1 / -1;
+    }
     
-    .cards {
-        grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 1170px){
+    .state-select{
+        grid-column: span 2;
+    }
+    .state-select-2{
+        grid-column: span 1;
+
+    }
+    .state-select-3{
+        grid-column: span 1;
     }
 }
 
-/* Estilo para telas médias */
-@media (min-width: 769px) and (max-width: 1024px) {
-    .sidebar {
-        width: 150px;
-    }
+/**********************************/
+/* 7. Data Box
+/**********************************/
 
-    .cards {
-        grid-template-columns: 1fr 1fr;
+.data-box__header{
+    font: var(--ts-caption);
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+    min-height: 5rem;
+    transition: var(--transition);
+}
+
+.data-box__description{
+    font: var(--ts-normal-text);
+    transition: var(--transition);
+}
+
+
+@media screen and (min-width: 960px){
+    .data-box--Atividades-Date{
+        grid-column: span 1;
+        grid-row: span 2;
     }
 }
 
-/* Estilo para telas grandes */
-@media (min-width: 1025px) {
-    .sidebar {
-        width: 200px;
-    }
-
-    .cards {
-        grid-template-columns: repeat(2, 1fr);
+@media screen and (min-width: 960px){
+    .data-box--HumorAgrupado{
+        grid-column: span 1;
+        grid-row: span 2;
     }
 }
+
+@media screen and (min-width: 960px){
+    .data-box--Alimentacao{
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+}
+
+@media screen and (min-width: 1170px){
+    .data-box--Alimentacao{
+        grid-column: span 4;
+        grid-row: span 6;
+    }
+    .data-box--Atividades-Date, .data-box--HumorAgrupado{
+        grid-column: span 2;
+        grid-row: span 6;
+    }
+}
+
+
+
+/**********************************/
+/* Loading
+/**********************************/
+
+.loading{
+    position: fixed;
+    background-color: var(--clr-background);
+    transition: var(--transition);
+    width: 100vw;
+    height: 100vh;
+    font-size: 4.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+.loading__spinner{
+    animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+    to{
+        transform: rotate(360deg);
+    }
+}
+
+.loading--hide{
+    visibility: hidden;
+    opacity: 0;
+}
+
+
 
